# py-engineering-chat

./: .env  .gitignore  ACTION_PLAN.md  Dockerfile  `pyproject.toml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.chroma_db/: chroma.sqlite3
`py_engineering_chat/agents/: general_agent.py
py_engineering_chat/: main.py
py_engineering_chat/agents/: __init__.py  base_agent.py  basic_agent.py  context_evaluator.py  docs_agent.py  general_agent.py  planning_agent.py  text_summarizer.py  tools_agent.py  tools_openai.py
py_engineering_chat/cli/: __init__.py  chat_with_agent.py
py_engineering_chat/research/: __init__.py  list_collections.py  research.py  scan_codebase.py  settings.py  web_crawler.py
py_engineering_chat/tests/: conftest.py  test_spider.py
py_engineering_chat/tools/: base_tool.py  custom_tools.py  directory_structure_tool.py  file_read_tool.py  file_write_tool.py  git_commit_tool.py  git_create_branch.py  git_merge_tool.py  linting_router.py  shell_command_tool.py
py_engineering_chat/tools/linters/: base_linter.py  python_linter.py
py_engineering_chat/util/: MemoryRefiner.py  add_codebase.py  chat_settings_manager.py  chroma_db.py  chroma_search.py  codebase_search.py  command_parser.py  content_chunker.py  context_model.py  conversation_summarizer.py  docs_search.py  enter_key_bindings.py  file_completer.py  get_file_list.py  logger_util.py  tiered_memory.py
tests/: test_chroma_db.py
